View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025514 | Open CASCADE | OCCT:Foundation Classes | public | 2014-11-24 22:25 | 2015-05-14 15:32 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025514: TKernel, OSD_Timer - do not accumulate error in timer within queries in running state | ||||
Description | Current implementation of methods OSD_Timer::ElapsedTime(), OSD_Timer::Show() and OSD_Chronometer::Show() calls ::Stop()/::Start() to accumulate values which involves accuracy loss when called many time in short intervals. | ||||
Tags | No tags attached. | ||||
Test case number | bugs fclasses(002) bug25514 | ||||
|
Branch CR25514 has been created by kgv. SHA-1: eea4f6ac697ddecc778fb83e1409c728a3f69e03 Detailed log of new commits: Author: kgv Date: Mon Nov 24 22:35:33 2014 +0300 0025514: TKernel, OSD_Timer - do not accumulate error in timer within queries in running state |
|
Patch is ready for review in branch CR25514. |
|
No remarks, please test |
|
Branch CR25514 has been updated by apv. SHA-1: 46ca30849a4cc3291439ac0d1294c4d4274d93d1 Detailed log of new commits: Author: apv Date: Thu Nov 27 17:18:54 2014 +0300 Test-case for issue 0025514 |
|
Dear kgv, please review test-case. |
|
In general test case looks fine - it shows 0.3 second difference on my system without the patch.+# Comparison of timer's values +if {$TimerValue_1 != $TimerValue_2} { + puts "ERROR: OCC25514 is reproduced." +} please print the time difference in seconds and compare it with some tolerance - there is no guarantee that them should be equal, just very near to each other. Execution with CPU loaded in background by other processes might lead to broken test results, but probably should be sufficient to some degree. |
|
Branch CR25514 has been updated by apv. SHA-1: 27f73768d3b454c3814794e50e05abb31f8c6546 Detailed log of new commits: Author: apv Date: Thu Nov 27 18:12:51 2014 +0300 Update of test-case |
|
Dear BugMaster, Branch CR25415 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: eea4f6ac697ddecc778fb83e1409c728a3f69e03 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 0 (1 on master) Regressions/Differences: Not detected Testing cases: bugs fclasses(002) bug25514 - OK http://occt-tests/CR25514-master-occt/Debian60-64/bugs/fclasses/bug25514.html http://occt-tests/CR25514-master-occt/Windows-32-VC10/bugs/fclasses/bug25514.html Testing on Linux: Total MEMORY difference: 359648444 / 359261588 Total CPU difference: 47307.930000000095 / 47823.01999999983 Testing on Windows: Total MEMORY difference: 274072160 / 273727588 Total CPU difference: 45232.78125 / 40219.09375 |
|
Branch CR25514 has been deleted by inv. SHA-1: 27f73768d3b454c3814794e50e05abb31f8c6546 |
occt: master 7e7bbb3a 2014-11-28 10:22:41 Committer: bugmaster Details Diff |
0025514: TKernel, OSD_Timer - do not accumulate error in timer within queries in running state Test-case for issue 0025514 Update of test-case |
Affected Issues 0025514 |
|
mod - src/OSD/OSD_Chronometer.cdl | Diff File | ||
mod - src/OSD/OSD_Chronometer.cxx | Diff File | ||
mod - src/OSD/OSD_Timer.cdl | Diff File | ||
mod - src/OSD/OSD_Timer.cxx | Diff File | ||
add - tests/bugs/fclasses/bug25514 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-11-24 22:25 | kgv | New Issue | |
2014-11-24 22:25 | kgv | Assigned To | => abv |
2014-11-24 22:36 | kgv | Summary | TKernel, OSD_Timer - timer accumulates error when quered in short intervals => TKernel, OSD_Timer - do not accumulate error in timer within queries in running state |
2014-11-24 22:37 | git | Note Added: 0034658 | |
2014-11-24 22:37 | kgv | Note Added: 0034659 | |
2014-11-24 22:37 | kgv | Status | new => resolved |
2014-11-24 22:37 | kgv | Relationship added | related to 0025382 |
2014-11-25 16:39 |
|
Note Added: 0034677 | |
2014-11-25 16:39 |
|
Assigned To | abv => bugmaster |
2014-11-25 16:39 |
|
Status | resolved => reviewed |
2014-11-25 17:14 |
|
Assigned To | bugmaster => apv |
2014-11-27 17:19 | git | Note Added: 0034756 | |
2014-11-27 17:21 |
|
Note Added: 0034757 | |
2014-11-27 17:21 |
|
Assigned To | apv => kgv |
2014-11-27 17:21 |
|
Status | reviewed => feedback |
2014-11-27 17:21 |
|
Test case number | => bugs fclasses(002) bug25514 |
2014-11-27 17:36 | kgv | Note Added: 0034760 | |
2014-11-27 17:36 | kgv | Assigned To | kgv => apv |
2014-11-27 18:13 | git | Note Added: 0034762 | |
2014-11-27 19:11 |
|
Note Added: 0034770 | |
2014-11-27 19:11 |
|
Assigned To | apv => bugmaster |
2014-11-27 19:11 |
|
Status | feedback => tested |
2014-12-01 12:26 | bugmaster | Changeset attached | => occt master 7e7bbb3a |
2014-12-01 12:26 | bugmaster | Status | tested => verified |
2014-12-01 12:26 | bugmaster | Resolution | open => fixed |
2015-01-19 16:23 | bugmaster | Target Version | 7.1.0 => 6.9.0 |
2015-01-26 12:37 | git | Note Added: 0036614 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |