0025514: TKernel, OSD_Timer - do not accumulate error in timer within queries in running state

Test-case for issue #25514

Update of test-case